tests/ui/closures/2229_closure_analysis/arrays-completely-captured.stderr
error: First Pass analysis includes:
  --> $DIR/arrays-completely-captured.rs:9:5
   |
LL | /     || {
LL | |
LL | |
LL | |         m[0] += 10;
...  |
LL | |     };
   | |_____^
   |
note: Capturing m[] -> Mutable
  --> $DIR/arrays-completely-captured.rs:12:9
   |
LL |         m[0] += 10;
   |         ^
note: Capturing m[] -> Mutable
  --> $DIR/arrays-completely-captured.rs:15:9
   |
LL |         m[1] += 40;
   |         ^

error: Min Capture analysis includes:
  --> $DIR/arrays-completely-captured.rs:9:5
   |
LL | /     || {
LL | |
LL | |
LL | |         m[0] += 10;
...  |
LL | |     };
   | |_____^
   |
note: Min Capture m[] -> Mutable
  --> $DIR/arrays-completely-captured.rs:12:9
   |
LL |         m[0] += 10;
   |         ^

error: aborting due to 2 previous errors

